renamed method 'register_schema' to 'register_types'
- improved doc synopsis
- fixed entity->_get_related() to handle query and options arguments

--- a/t/entities.yml
+++ b/t/entities.yml
@@ -20,7 +20,7 @@ Track:
   attributes:
     - { name: 'title' }
     - { name: 'description', type: 'text' }
-    - { name: 'length', type: 'int' }
+    - { name: 'duration', type: 'int' }
 
 Lyric:
   attributes:
