--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,13 @@ perl:
   - "5.16"
   - "5.18"
   - "5.20"
+  - "5.22"
+  - "dev"
+matrix:
+  include:
+    - perl: "5.24"
+      env: COVERAGE=1
+  allow_failures:
+    - perl: dev
+before_install:
+  - eval $(curl https://travis-perl.github.io/init) --auto
